app/mysql_pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    name: mysql
spec:
  containers:
    - resources:
        limits :
          cpu: 0.5
      image: mysql:in4
      name: mysql
      args:
        - "--ignore-db-dir" //??
        - "lost+found"
      ports:
        - containerPort: 3306
          name: mysql
      volumeMounts:
        # name must match the volume name below
        - name: mysql-persistent-storage
        # mount path within the container
          mountPath: /var/lib/mysql
  volumes:
    - name: mysql-persistent-storage
      cinder:
volumeID:  // what idcan be here?
fsType: ext4 //?
