app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-for-app
  namespace: default 
  labels:
    server: "nginx"
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: kube-for-app
  type: "LoadBalancer"
  loadBalancerIP: ""
